# rustos

./: Cargo.toml  ISO-README.md  Makefile  README.md  aarch64-unknown-none-softfloat.json  create-full-iso.sh  create-iso.sh  create-large-iso.sh  linker.ld  run_tests.sh  rustos-aarch64-unknown-none-softfloat-20250925.iso  setup.sh  test-iso.sh  verify_build.sh
.cargo/: config.toml
.github/: RELEASE_TEMPLATE.md
.github/workflows/: build-iso.yml  ci.yml
iso/: install.sh
iso/EFI/BOOT/: grub.cfg
iso/boot/grub/: grub.cfg
src/: boot.s  cosmic.rs  fs.rs  graphics.rs  input.rs  ipc.rs  lib.rs  main.rs  memory.rs  panic.rs  process.rs  syscall.rs  test_framework.rs  uart.rs  userspace.rs  wayland.rs
src/coreutils/: cat.rs  cp.rs  echo.rs  head.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  pwd.rs  rm.rs  tail.rs  touch.rs  wc.rs
tests/: boot.s  fs.rs  ipc.rs  kernel_tests.rs  memory.rs  process.rs  stress_tests.rs  syscall.rs  syscall_tests.rs  test_framework.rs  uart.rs  userspace.rs
