[package]
name = "rustos"
version = "0.1.0"
edition = "2021"

[dependencies]
spin = "0.9"
linked_list_allocator = "0.10"
bitflags = "2.4"
volatile = "0.4"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[lib]
crate-type = ["staticlib", "rlib"]


[[bin]]
name = "kernel"
path = "src/main.rs"

[[bin]]
name = "kernel_tests"
path = "src/bin/kernel_tests.rs"

[[bin]]
name = "syscall_tests"
path = "src/bin/syscall_tests.rs"

[[bin]]
name = "stress_tests"
path = "src/bin/stress_tests.rs"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.cargo-xbuild]
memcpy = false
